# VibeDataCatalog

./: .env.example  .env.template  .gitignore  README.md  README_CONTAINERS.md  check_excel_dependencies.py  example_api_usage.py  excel_preview_guide.md  generate_excel_samples.py  init_db.py  init_storage.py  main.py  pyproject.toml  requirements.txt  run.py  setup_blob_permissions.ps1  setup_cosmos_permissions.ps1  soft_delete_implementation.md  soft_delete_instructions.md  test_comprehensive_search.py  test_excel_preview.py  test_search.py  test_soft_delete.py
app/: __init__.py  admin_routes.py  api.py  api_auth.py  api_routes.py  auth.py  auth_routes.py  cosmos_client.py  dataset_routes.py  datasets.py  routes.py  search_datasets_updated.py  utils.py
app/datasets/: __init__.py  files.py  models.py  routes.py  search.py  utils.py
app/templates/: base.html  dashboard.html  index.html  login.html  signup.html
app/templates/admin/: manage_users.html
app/templates/auth/: profile.html
app/templates/datasets/: edit.html  lineage.html  list.html  new_version.html  preview.html  register.html  search.html  upload.html  view.html  view_updated.html
docs/: excel_preview.md  excel_preview_user_guide.md  managed_identity.md
templates/datasets/: register.html
