[project]
name = "vibedatacatalog"
version = "0.1.0"
description = "Data Catalog and Lineage Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "flask-login>=0.6.2",
    "azure-cosmos>=4.5.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.14.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=2.3.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.sources]
"" = ""

[tool.uv]
dev-dependencies = [
    "ipython>=8.12.0",
    "debugpy>=1.6.0",
]

[tool.uv.sources]
